repo-example/overlays/example/patches/db-pvc-size.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  template:
    spec:
      containers:
      - name: db
        resources:
          limits:
            memory: 1Gi
            cpu: "500m"
