repo-example/overlays/example/patches/secure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
